# kinochrome

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
recipes/: aac.toml  h264.toml  h264_vaapi.toml  h265_nvenc.toml  h265_nvenc_10bit_420_lossless.toml  h265_nvenc_10bit_444_lossless.toml  h265_nvenc_8bit_420_lossless.toml  h265_nvenc_8bit_444_lossless.toml
shaders/: colorspaces.h  comp.glsl  debayer.h  frag.glsl  vert.glsl
src/: color_utils.rs  encoding.rs  gpu_compute.rs  gui.rs  import.rs  main.rs  renderer.rs  state.rs
