[package]
name = "kinochrome"
version = "0.1.0"
edition = "2024"
authors = ["Maroš Grego <maros@grego.site>"]
description = "GPU accelerated raw video processing"
repository = "https://git.sr.ht/~grego/kinochrome"

[dependencies]
# Crates connected to the Kinochrome project
ljpeg = "0.1.2"
mlv = { version = "0.0.2", features = ["serde"] }
dng = "1.5.3"
packbytes = "0.2"

bytemuck = { version = "1.23", features = ["derive"] }
vulkano = { version = "0.35", features = ["serde"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "rwh_06"] }
egui = { version = "0.32", features = ["serde"] }
egui-winit = { version = "0.32", default-features = false, features = ["x11", "wayland"] }
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.8"
ciborium = "0.2"
foldhash = "0.1"
shlex = "1.3"
egui-file-dialog = { version = "0.11", default-features = false }

[profile.dev]
opt-level = 1 # ljpeg decoding is unusably slow otherwise
debug = "limited"
lto = false
strip = "debuginfo"
panic = "abort"

[profile.release]
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
